--- a/config/database.yml
+++ b/config/database.yml
@@ -23,9 +23,9 @@ default: &default
 
 development:
   <<: *default
-  database: invoicing_development
-  username: ricardorodriguez
-  password:
+  database: shipping_development
+  username: postgres
+  password: Magezi@12!!
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
